# pants-docker-generator

./: README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude-plugin/skills/docker-generator/: SKILL.md
.claude-plugin/skills/docker-generator/reference/: builder-api.md  directives-api.md  presets-api.md
src/pants_docker_generator/: __init__.py  _directives.py  _dockerfile.py  _dockerignore.py  _labels.py  _presets.py  _stage.py
tests/unit/: test_directives.py  test_dockerfile.py  test_dockerignore.py  test_labels.py  test_presets.py  test_stage.py
