[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaymd96-pants-docker-generator"
dynamic = ["version"]
description = "General-purpose Dockerfile generation library"
readme = "README.md"
requires-python = ">=3.11,<4"
license = "Apache-2.0"
authors = [{ name = "jaymd96" }]
keywords = ["pants", "docker", "dockerfile", "packaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.version]
path = "src/pants_docker_generator/__about__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/pants_docker_generator"]

[tool.hatch.build.targets.sdist]
include = ["src/pants_docker_generator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov=pants_docker_generator {args}"
